# xiphos

./: CMakeLists.txt  Notice.meson.md  meson.build  meson_options.txt
cmake/: XiphosConfig_h.cmake  XiphosReport.cmake
data/: xiphos.js
desktop/: meson.build
help/: meson.build
pixmaps/: meson.build
po/: zh_CN.po
src/backend/: meson.build
src/editor/: CMakeLists.txt  editor.c  editor.h  editor2.c  link_dialog.h  link_dialog2.c  meson.build  slib-editor.h  webkit2_editor.c  webkit_editor.c  webkit_editor.h  webkit_editor2.c  xp-editor-selection.c  xp-editor-selection.h  xp-webkit-editor.c  xp-webkit-editor.h
src/gtk/: CMakeLists.txt  bookmarks_menu.c  commentary.c  dialog.c  display_info.c  main_menu.c  make-locale-set.sh  menu_popup.c  meson.build  navbar_versekey_editor.c  sidebar.c  treekey-editor.c  utilities.c
src/gui/: meson.build  navbar_versekey_editor.h
src/main/: meson.build  navbar_versekey.cc  url.cc
src/webkit/: meson.build
src/xiphos_html/: meson.build
ui/: meson.build
