xiphos_help_sources = [
  'index.page',
  'legal.xml',
  'xiphos-01-introduction.page',
  'xiphos-02-shortcut-keys.page',
  'xiphos-10-start.page',
  'xiphos-11-interface.page',
  'xiphos-20-modules-introduction.page',
  'xiphos-21-modules-configuration.page',
  'xiphos-22-modules-install.page',
  'xiphos-23-modules-maintenance.page',
  'xiphos-24-modules-third-party.page',
  'xiphos-30-search.page',
  'xiphos-31-advanced-search.page',
  'xiphos-32-search-syntax.page',
  'xiphos-33-original-language.page',
  'xiphos-40-personal-commentary.page',
  'xiphos-41-studypad.page',
  'xiphos-42-journals.page',
  'xiphos-50-preferences-general-settings.page',
  'xiphos-51-preferences-biblesync.page',
  'xiphos-52-preferences-fonts-colors.page',
  'xiphos-53-preferences-modules.page',
  'xiphos-60-online-help.page',
  'xiphos-90-credits.page',
]

xiphos_help_media = [
  'figures/first_start.png',
  'figures/gtkhtml3-vs-mozembed.png',
  'figures/interface_biblepane-options.png',
  'figures/interface_biblepane.png',
  'figures/interface_commentarypane.png',
  'figures/interface_dictionary.png',
  'figures/interface_menubar.png',
  'figures/interface_menubar-view.png',
  'figures/interface_parallel.png',
  'figures/interface_parallel-separate.png',
  'figures/interface.png',
  'figures/interface_searchpane.png',
  'figures/interface_shortcut.png',
  'figures/interface_sidepane.png',
  'figures/interface_toolbar.png',
  'figures/interface_viewer.png',
  'figures/journal.png',
  'figures/module-overview.png',
  'figures/module.png',
  'figures/personal.png',
  'figures/preferences_fonts-color.png',
  'figures/preferences_fonts-misc.png',
  'figures/preferences_general-biblesync.png',
  'figures/preferences_general-misc.png',
  'figures/preferences_modules-misc.png',
  'figures/preferences_modules-parallel.png',
  'figures/preferences.png',
  'figures/search_search.png',
  'figures/studypad.png',
  'figures/sword3.png',
  'figures/sword_config.png',
  'figures/sword_install.png',
  'figures/sword_remove.png',
  'figures/sword_sources.png',
  'figures/xiphos-icon.png',
  'figures/xiphos-trail-icon.png',
]

gnome.yelp(
  meson.project_name(),
  sources: xiphos_help_sources,
  media: xiphos_help_media,
  symlink_media: true,
)
