mk_locale_set = find_program('make-locale-set.sh')

generated = configure_file(
capture : true,
output : 'locale_set.c',
input : '../../po/LINGUAS',
command : [mk_locale_set, '@INPUT@', '@OUTDIR@'],
)

sources = [
'about_modules.c',
'about_sword.c',
'about_trans.c',
'about_xiphos.c',
'bibletext.c',
'bibletext_dialog.c',
'bookmark_dialog.c',
'bookmarks_menu.c',
'bookmarks_treeview.c',
'cipher_key_dialog.c',
'commentary.c',
'commentary_dialog.c',
'dialog.c',
'dictlex.c',
'dictlex_dialog.c',
'display_info.c',
'dummy.cpp',
'export_bookmarks.c',
'export_dialog.c',
'find_dialog.c',
'font_dialog.c',
'gbs.c',
'gbs_dialog.c',
'gui.c',
'main_menu.c',
'main_window.c',
'menu_popup.c',
'mod_mgr.c',
'navbar_book.c',
'navbar_book_dialog.c',
'navbar_versekey.c',
'navbar_versekey_dialog.c',
'navbar_versekey_editor.c',
'navbar_versekey_parallel.c',
'parallel_dialog.c',
'parallel_tab.c',
'parallel_view.c',
'preferences_dialog.c',
'search_dialog.c',
'search_sidebar.c',
'sidebar.c',
'sidebar_dialog.c',
'splash.c',
'tabbed_browser.c',
'treekey-editor.c',
'utilities.c',
'xiphos.c',
generated,
]

#'ipc.c',

main = executable('xiphos',
    sources,
    include_directories : src_dir,
    link_with: [backend_lib, editor_lib, main_lib, xiphos_html_lib, webkit_lib],
    dependencies : all_deps,
    install: true,
)
