sources = [
'biblesync_glue.cc',
'biblesync_glue.h',
'configs.cc',
'configs.h',
'display.cc',
'display.hh',
'export_passage.cc',
'export_passage.h',
'global_ops.cc',
'global_ops.hh',
'gtk_compat.h',
'lists.cc',
'lists.h',
'main.c',
'mod_mgr.cc',
'mod_mgr.h',
'modulecache.cc',
'modulecache.hh',
'module_dialogs.cc',
'module_dialogs.h',
'navbar_book.cc',
'navbar_book_dialog.cc',
'navbar_book_dialog.h',
'navbar_book.h',
'navbar.cc',
'navbar.h',
'navbar_versekey.cc',
'navbar_versekey.h',
'parallel_view.cc',
'parallel_view.h',
'prayerlists.cc',
'prayerlists.h',
'previewer.cc',
'previewer.h',
'search_dialog.cc',
'search_dialog.h',
'search_sidebar.cc',
'search_sidebar.h',
'settings.c',
'settings.h',
'sidebar.cc',
'sidebar.h',
'sword.cc',
'sword.h',
'sword_treekey.cc',
'sword_treekey.h',
'tab_history.c',
'tab_history.h',
'url.cc',
'url.hh',
'xml.c',
'xml.h',
]

main_lib = static_library('main',
    sources,
    include_directories : src_dir,
    dependencies : all_deps,
)
